# fileshare

./: README_PROJECTS.md  app_test7-0618.tgz  logs.tgz
P-VCU/P-VCU/: .gitignore  CMakeLists.txt  application.c  build.sh  changelog  lib.sh  lib3.sh  main.c  main_test.cc  meminfo.sh  tuya_device_cfg.json
P-VCU/P-VCU/RTP/: CMakeLists.txt
P-VCU/P-VCU/RTP/include/: rtp_header.h  rtp_internal.h  rtp_packet.h  rtp_param.h  rtp_payload.h  rtp_payload_helper.h  rtp_payload_internal.h  rtp_profile.h  rtp_util.h
P-VCU/P-VCU/RTP/src/: rtp_packet.c  rtp_profile.c  rtp_ssrc.c
P-VCU/P-VCU/hex/: gc4653_mipi_attr.hex  gc4653_mipi_night_attr.hex
P-VCU/P-VCU/include/: common_defs.h  dpbase.h  dplib.h  myconfig.h
P-VCU/P-VCU/include/base/: ServiceFile.h  dpbaselib.h  dpinput.h  dpnetwork.h  hotplug.h  systemmsg.h
P-VCU/P-VCU/include/data/: DBICCard.h  DBLanguage.h
P-VCU/P-VCU/include/media_v6/: list.h  npu_com.h  sample_common.h  sample_common_isp.h
P-VCU/P-VCU/include/utils/: atomic.h  bmem.h  circlebuf.h  crc32.h  file-helper.h  heap.h  input_event.h  list.h  log.h  md5-helper.h  md5.h  mq.h  rw_helper.h  sem.h  time_helper.h  timer_heap.h  timer_queue.h  util.h  wave_file_fmt.h
P-VCU/P-VCU/plc_test/: Makefile  plc_ctrl.c  plc_test  plc_test_V1  plc_test_x5  spi_plc.c  spi_plc.h
P-VCU/P-VCU/src/base/: ServiceFile.c  dp_untar.c  dpbase.c  dpbaselib.c  dpfile.c  dpinput.c  dpnetwork.c  dptcpip.c  dptime.c  hotplug.c  systemmsg.c
P-VCU/P-VCU/src/dpdata/: DBICCard.c  DBLanguage.c  DBdpdatabase.c
P-VCU/P-VCU/src/dtln/: DTLN_defs.h  dtln_main.cc  dtln_tr.h
P-VCU/P-VCU/src/media/: aiservice_mpp_helper.c  aiservice_mpp_helper.h  sample_common_venc.c  sample_common_venc.h  video_encode.c  video_encode.h
P-VCU/P-VCU/src/media_v6/: aov_demo.h  aov_main.c  aov_xbus.h  audio_test.c  tflite_c_win.cpp  v6_main.c
P-VCU/P-VCU/src/periphery/: gpio.c  gpio.h  gpio_port.h  serial.c  serial.h
P-VCU/P-VCU/src/service/: card_service.c  card_service.h  gpio_service.c  gpio_service.h  hard_node_service.c  hard_node_service.h  hardware_test.c  hardware_test.h  mtd_upgrade.c  pc_service.c  pc_service.h  plc_service.c  plc_service.h  service_upgrade.c  upgrade_spl.c  video_service.c  video_service.h
P-VCU/P-VCU/src/sound/: keytone_mgnt.c  keytone_mgnt.h  sound_play.c  sound_play.h
P-VCU/P-VCU/src/transport/: CMakeLists.txt  DPBase.h  DPDef.h  list.c  list.h  tran_audio.c  tran_audio.h  tran_video.c  tran_video.h  trans.c  trans.h
P-VCU/P-VCU/src/utils/: atomic.c  bmem.c  cJSON.c  crc32.c  file-helper.c  hex.c  input_event.c  log.c  md5-helper.c  md5.c  mq.c  rb_tree.c  rw_helper.c  sem.c  time_helper.c  timer_heap.c  wave_file_fmt.c
P-VCU/P-VCU/src/watchdog/: hard_watchdog.c  soft_watchdog.c  watchdog_mgnt.c  watchdog_mgnt.h
P-VCU/P-VCU/tuya/: CMakeLists.txt  tuya_server.c  tuya_tkl_support.c  tuyamain.c  tuyamain.h  ty_dp_define.h  ty_sdk_av.c  ty_sdk_call.c  ty_sdk_call.h  ty_sdk_common.h  ty_sdk_doorbell.c  ty_sdk_dp_callback.c  ty_sdk_dp_handler.c  ty_sdk_lowpower.c  ty_sdk_media_callback.c  ty_sdk_motion_detect.c  ty_sdk_sd_album.c  ty_sdk_sd_card.c  ty_sdk_status_callback.c  ty_sdk_upgrade.c  ty_sdk_upgrade.h  ty_sys.h
P-VCU/P-VCU/tuya/linux/: tkl_wired.c
f1_room_code/f1_room_code/: .gitignore  AGENTS.md  Cargo.toml  SESSION_HANDOFF.md  build.rs  font-coverage.md  lib.sh  readme.txt  runtime-coordinator-roadmap.md  todo.md  work.md  室内机.pen
f1_room_code/f1_room_code/.cargo/: config.toml
f1_room_code/f1_room_code/.claude/: settings.json
f1_room_code/f1_room_code/.claude/agent-memory/: cache-manager.sh  ui-workflow-state.json  workflow-state.json
f1_room_code/f1_room_code/.claude/agents/: slint-incremental-generator.md  slint-ui-generator-v2.md  slint-ui-generator.md  slint-verifier-enhanced.md  slint-verifier.md  ui-incremental-workflow.md  ui-layout-analyzer-cached.md  ui-layout-analyzer-v2.md  ui-layout-analyzer.md  ui-workflow-orchestrator.md  ui-workflow-with-verification.md
f1_room_code/f1_room_code/assets/images/: pencil-icon-aliases.txt  pencil-icon-manifest.txt
f1_room_code/f1_room_code/docs/: CODEX_HANDOFF.md  config-and-integration.md  current-features.md  runtime-flows.md  韩国MOD-设备协议.md
f1_room_code/f1_room_code/images/: 韩国门口机(1).fig  韩国门口机.fig
f1_room_code/f1_room_code/lib/: IpCammer.h  dplib_net.h  dplib_wifi.h  goblin_aiot.h  goblin_aiot_callx.h  goblin_transmission.h  libcrypto.so.1.1  libcurl.so.4.5.0  libgoblin_plc_trancore.so.1  libgoblin_plc_trancore.so.1.0.0  libopus.so.0.8.0  libpaho-mqtt3as.so.1  libpaho-mqtt3as.so.1.3.9  libpaho-mqtt3cs.so.1  libpaho-mqtt3cs.so.1.3.9  libssl.so.1.1  libxml2.so.2.9.4
f1_room_code/f1_room_code/lib/codec/: AudioCore.h
f1_room_code/f1_room_code/lib/mtrans/: mtrans.h
f1_room_code/f1_room_code/scripts/: kv_editor.py  kv_tool.py  update_1000_font.py
f1_room_code/f1_room_code/src/: aiot.rs  aiot_sys.rs  app_event.rs  call.rs  capture_records.rs  d2d.rs  db.rs  i18n.rs  indoor.rs  indoor_sys.rs  ipc.rs  ipc_sys.rs  main.rs  net_sys.rs  sound.rs  sound_sys.rs  system_info.rs  webrtc.rs  webrtc_sys.rs  wifi.rs  wifi_sys.rs
f1_room_code/f1_room_code/ui/: AbsentModeTimePicker.slint  ButtonEffect7FHMR.slint  ButtonEffectD31Kv.slint  ButtonEffectGuhoF.slint  ButtonEffectJeBWl.slint  ButtonEffectLkIXT.slint  ButtonEffectM9yPz.slint  ButtonEffectMqEIB.slint  ButtonEffectNRYdq.slint  ButtonEffectQ6PcB.slint  ButtonEffectVYZDx.slint  CCTVScreen.slint  CallPageBase.slint  CaptureDeleteConfirmDialog.slint  CaptureFullImage.slint  CaptureImage.slint  CaptureImageAllClear.slint  CaptureImageClearDialog.slint  CaptureImageSelectClear.slint  CctvConnectionTestDialog.slint  CctvDeleteConfirmDialog.slint  CctvList.slint  CctvNumpadDialog.slint  CctvSetting.slint  CctvTextInputDialog.slint  ClockModeBackground1.slint  CommunicationTimePicker.slint  DisplaySetting.slint  DoorCameraCall.slint  DoorOpenSecondPicker.slint  EVCalling.slint  EtcSetting.slint  FullKeyboardPanel.slint  GeneralSetting.slint  GuardPhoneCall.slint  GuardPhoneCommunication.slint  Keyboard.slint  LobbyPhoneCall.slint  MainPage.slint  ModeSetting.slint  (+22 more)
(+313 files in other folders)
