[package]
name = "kr_room_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.16.0", default-features = false, features = ["compat-1-2", "renderer-software", "libm", "std"] }
slint-g2d-platform = { git = "http://192.168.253.238/wshl/slint-f1.git" }
fontique = { version = "0.7", default-features = false, features = ["fontconfig-dlopen"] }
libc = { version = "0.2", default-features = false }
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
qrcodegen = "1.8"

[build-dependencies]
cc = "1.2"
slint-build = { git = "http://192.168.253.238/wshl/slint-swash.git" }

[profile.release]
opt-level = 'z'        # 体积优化
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 2

[patch.crates-io]
slint = { git = "http://192.168.253.238/wshl/slint-swash.git" }
i-slint-core = { git = "http://192.168.253.238/wshl/slint-swash.git" }
i-slint-common = { git = "http://192.168.253.238/wshl/slint-swash.git" }
i-slint-renderer-software = { git = "http://192.168.253.238/wshl/slint-swash.git" }

[workspace]
